--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-The solution to MIT 6.828 Fall19, with lab report(in Chinese) at https://www.cnblogs.com/nlp-in-shell/
+The solution to MIT 6.828 Fall19, with lab report(in Chinese) at https://blog.mky.moe/mit6828/menu/
